tests/models/struct/unnamed/f64/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    f64
);
fn main() {}
