tests/models/struct/unnamed/f64/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    f64
);
fn main() {}
